[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Level2.gd" type="Script" id=1]
[ext_resource path="res://paper background.png" type="Texture" id=2]
[ext_resource path="res://FontData.tres" type="DynamicFont" id=3]

[node name="Level2" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1366, 768 )
texture = ExtResource( 2 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_right = -20.0
custom_constants/separation = 20

[node name="StoryText" type="Label" parent="VBoxContainer"]
margin_right = 1326.0
margin_bottom = 350.0
rect_min_size = Vector2( 0, 350 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "You saved whoever you were supposed to save.... feels a little anti-climatic doesn't it?

"
align = 1
valign = 1
autowrap = true

[node name="Option1" type="Button" parent="VBoxContainer"]
margin_top = 370.0
margin_right = 1326.0
margin_bottom = 470.0
rect_min_size = Vector2( 0, 100 )
custom_fonts/font = ExtResource( 3 )
text = "Play again?"

[node name="Option2" type="Button" parent="VBoxContainer"]
margin_top = 490.0
margin_right = 1326.0
margin_bottom = 590.0
rect_min_size = Vector2( 0, 100 )
custom_fonts/font = ExtResource( 3 )
text = "Quit?"

[node name="Option3" type="Button" parent="VBoxContainer"]
margin_top = 610.0
margin_right = 1326.0
margin_bottom = 710.0
rect_min_size = Vector2( 0, 100 )
custom_fonts/font = ExtResource( 3 )
text = "Quit?"

[connection signal="pressed" from="VBoxContainer/Option1" to="." method="_on_Option1_pressed"]
[connection signal="pressed" from="VBoxContainer/Option2" to="." method="_on_Option2_pressed"]
[connection signal="pressed" from="VBoxContainer/Option3" to="." method="_on_Option3_pressed"]
